# kaggle_template

./: .gitignore  Makefile  README.md  Snakefile  dataset-metadata.json  pyproject.toml
kaggle_template/scripts/: combine_features.py  download_dataset.py  scaled.py  submission.py  timeseries.py  tune_meta_model.py  tune_model.py  tune_stack_regression_and_predict.py  tune_wide_model.py
kaggle_template/utils/: run_utils.py
notebooks/: analyse_timeseries.ipynb  analysis.ipynb  combine_features.ipynb  feature_engineering.ipynb  feature_selection.ipynb  hyperparameter_tuning_wide.ipynb  initial.ipynb  modeling.ipynb  submission.ipynb
profile/: config.yaml
