[tool.poetry]
name = "kaggle_template"
version = "0.1"
description = "kaggle_template for Ashutosh"
authors = ["Ashutosh Tiwari <findashutoshtiwari@gmail.com>"]
readme = "README.md"
packages = [{include = "kaggle_template"}]
classifiers = [
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[tool.poetry.dependencies]
python = "^3.11.0"
pandas = "*"
seaborn = "^0.13.0"
numpy = "1.24.3"
scikit-learn = "1.2.2"
kaggle = "*"
ipython = "*"
joblib = "^1.3.2"
psutil = "^5.9.5"
wandb = "^0.15.12"
pyarrow = "^13.0.0"
nvitop = "^1.3.1"
urllib3 = "1.26.11"
ipywidgets = "^8.1.1"
pickleshare = "^0.7.5"
torch = "^2.1.2"
torchaudio = "^2.1.2"
torchvision = "^0.16.2"
pytorch-lightning = "^2.1.3"
transformers = "^4.37.2"
datasets = "^2.17.1"
evaluate = "^0.4.1"
accelerate = "^0.27.2"
catboost = "^1.2.7"
xgboost = "^2.1.1"
snakemake = "^8.24.0"
isort = "^5.13.2"
ruff = "^0.7.0"
mypy = "^1.12.1"
black = "^24.10.0"
jupyter = "1.0.0"
jupyter-console = "6.6.3"
jupyter-events = "0.10.0"
jupyter-highlight-selected-word = "0.2.0"
jupyter_client = "8.6.2"
jupyter_contrib_core = "0.4.2"
jupyter_contrib_nbextensions = "0.7.0"
jupyter_core = "5.7.2"
jupyter_nbextensions_configurator = "0.6.4"
jupyter_server = "<2.0.0"  # Specified constraint instead of fixed version
jupyter_server_terminals = "0.5.3"
jupyterlab_pygments = "0.3.0"
jupyterlab_widgets = "3.0.11"
codeium-jupyter = "1.1.21"
traitlets = "5.9.0"
traittypes = "0.2.1"
notebook = "6.4.12"
optuna = "^4.0.0"
statsmodels = "^0.14.4"
lightgbm = "^4.5.0"
kaleido = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



# changes to probably improve this further
# 1. remove wide model weight
# 2. Do smoe feature engineering